[package]
name = "buildit"
version = "0.2.0"
edition = "2024"
description = "Build and push container images remotely on a Kubernetes cluster via unprivileged builder pods"
license = "MIT"
repository = "https://github.com/wseaton/buildit"
readme = "README.md"
keywords = ["kubernetes", "containers", "buildkit", "remote-build", "cli"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
flate2 = "1.1.9"
futures-util = "0.3.32"
ignore = "0.4.27"
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kube = { version = "4.0.0", features = ["runtime", "ws"] }
oci-client = { version = "0.17.0", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_norway = "0.9.42"
sha2 = "0.11.0"
tar = "0.4.46"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "io-util", "io-std", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
